# omni-starter-rasberry

./: nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: rasberry.yml
components/socket/: test.vue
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
